Signatures Services Update
- implemented most of the signature endpoint services in golang, updated UI to use new services
- services include pagination/limit/nextKey support when appropriate
- updated UI calls to use v3 signature services
- removed console errors
- updated go linter version to support golang 1.13
